--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "description": "",
   "dependencies": {
     "axios": "^1.11.0",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0",
+    "joi": "^18.0.1",
     "mysql2": "^3.14.3",
     "open-location-code": "^1.0.3"
   }
