--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
     "joi": "^18.0.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.3",
     "open-location-code": "^1.0.3"
   }
