--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "joi": "^18.0.1",
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
+    "node-abort-controller": "^3.1.1",
     "open-location-code": "^1.0.3"
+  },
+  "devDependencies": {
+    "jest": "^30.2.0",
+    "supertest": "^7.1.4"
   }
 }
