--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
     "node-abort-controller": "^3.1.1",
+    "node-cron": "^4.2.1",
     "open-location-code": "^1.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1"
