--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.927.0",
+    "@aws-sdk/s3-request-presigner": "^3.927.0",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "compression": "^1.8.1",
@@ -24,6 +26,7 @@
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "multer-s3": "^3.0.1",
     "mysql2": "^3.14.3",
     "node-abort-controller": "^3.1.1",
     "node-cron": "^4.2.1",
