--- a/.dockerignore
+++ b/.dockerignore
@@ -54,3 +54,36 @@ logs/
 # Temporary files
 tmp/
 temp/
+
+# Dependencies
+node_modules/
+npm-debug.log*
+
+# Environment files
+.env
+.env.local
+
+# Private secrets
+secrets/
+
+# Git
+.git/
+.gitignore
+
+# IDE
+.vscode/
+.idea/
+
+# OS files
+.DS_Store
+
+# Docker files
+Dockerfile
+docker-compose.yaml
+.dockerignore
+
+# Tests and docs
+*.md
+test/
+tests/
+coverage/
