--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.927.0",
+    "@aws-sdk/client-secrets-manager": "^3.943.0",
     "@aws-sdk/s3-request-presigner": "^3.927.0",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
@@ -35,6 +35,7 @@
     "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
+    "dotenv": "^17.2.3",
     "jest": "^30.2.0",
     "supertest": "^7.1.4"
   }
