--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "node-cron": "^4.2.1",
     "open-location-code": "^1.0.3",
     "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1"
+    "passport-jwt": "^4.0.1",
+    "dotenv": "^17.2.3"
   },
   "devDependencies": {
-    "dotenv": "^17.2.3",
     "jest": "^30.2.0",
     "supertest": "^7.1.4"
   }
