--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.7.2",
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
     "mysql2": "^3.15.3",
@@ -32,8 +34,7 @@
     "node-cron": "^4.2.1",
     "open-location-code": "^1.0.3",
     "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "dotenv": "^17.2.3"
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "jest": "^30.2.0",
